# cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  cli
src/: cmds.cpp  help.cc  help.txt  install.cc  main.cc  main.cpp  new.cc  run.cc  update.cc
src/include/: cmds.hpp  new.h
src/platform/linux/: help.cc  install.cc  install.cpp  new.cc  new.cpp  run.cc  run.cpp  update.cc  update.cpp  util.cpp
src/platform/linux/include/: help.h  install.h  install.hpp  new.h  new.hpp  run.h  run.hpp  update.h  update.hpp  util.hpp
src/platform/windows/: help.cc  install.cc  install.cpp  new.cc  new.cpp  run.cc  run.cpp  update.cc  update.cpp  util.cpp
src/platform/windows/include/: help.h  install.h  new.h  run.h  run.hpp  update.h  util.h
src/ps/: build.ps1  new.ps1  run.ps1
